# TemplonixLite

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  bootstrap.ps1  bootstrap.sh  env.example  pyproject.toml  requirements.txt
config/: start-templonix-silent.vbs  start-templonix.command
core/tools/: calendar_tool.py  diagram_tool.py  email_tool.py  gmail_tool.py
infra/: error_handler.py
infra/memory/: __init__.py  faiss_memory_manager.py  knowledge_loader.py
templonix_mcp/: app.py  manifest.json  mcp.mac.example.json  mcp.windows.example.json
tests/: __init__.py
workflows/: WORKFLOWS_README.md
workflows/meeting_intelligence/: prompt.txt
workflows/monday_morning_manager/: prompt.txt
workflows/ofi/: prompt.txt
workflows/sales_negotiator/: prompt.txt
