[tool.black]
line-length = 120
target-version = ['py310']

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true
explicit_package_bases = true
mypy_path = "."
plugins = ["pydantic.mypy"]
exclude = "(\\.venv|infra/packages/Poppler)"
follow_imports = "skip"
follow_imports_for_stubs = false
no_site_packages = true
show_error_codes = true
pretty = true

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",                    
    "--strict-markers",      
    "--tb=short",           
    "--cov=core",           
    "--cov=tools",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"